updated index.html